--- a/EOT_foram_analyses.Rmd
+++ b/EOT_foram_analyses.Rmd
@@ -7,10 +7,10 @@ This code forms part of the supplementary material to:
 
 KIRAN KOORAPATI, R., MOON, B. C. and COTTON, L. 2024. Surviving cliate change: morphological trends in reticulate _Nummulites_ cross the Eocene-Oligocene transition. _Palaeontology_
 
-This data is available from Zenodo at DOI: XXX and should be cited as:
+This data is available from Zenodo at DOI: [10.5281/zenodo.13623171](https://zenodo.org/doi/10.5281/zenodo.13623171) and should be cited as:
 
 
-KIRAN KOORAPATI, R., MOON, B. C. and COTTON, L. 2024. Data from 'Surviving cliate change: morphological trends in reticulate _Nummulites_ cross the Eocene-Oligocene transition'. Zenodo1, doi: XXX
+KIRAN KOORAPATI, R., MOON, B. C. and COTTON, L. 2024. Data from 'Surviving cliate change: morphological trends in reticulate _Nummulites_ cross the Eocene-Oligocene transition'. Zenodo1, doi: 10.5281/zenodo.13623171
 
 # Make code replicable
 
